[package]
name = "url-bot-rs"
version = "0.2.1"
description = "Minimal IRC URL bot in Rust"
repository = "https://github.com/nuxeh/url-bot-rs"
authors = ["Edward Cragg <drq.11235@gmail.com>"]
license = "ISC"
readme = "README.md"
build = "build.rs"

[build-dependencies]
built = "0.3.2"
man = "0.3.0"

[dev-dependencies]
tiny_http = "0.6.2"
diff = "0.1.11"

[dependencies]
irc = "0.13.6"
tokio-core = "0.1.17"
rusqlite = "0.14.0"
time = "0.1.40"
docopt = "1.1.0"
serde = "1.0.101"
serde_derive = "1.0.101"
itertools = "0.8.1"
regex = "1.3.1"
lazy_static = "1.3.0"
failure = "0.1.6"
reqwest = "0.9.10"
cookie = "0.12.0"
serde_rusqlite = "0.14.0"
mime = "0.3.14"
humansize = "1.1.0"
unicode-segmentation = "1.6.0"
toml = "0.5.5"
image = { version = "0.20.0", default-features = false, features = ["gif_codec", "jpeg", "png_codec"] }
directories = "2.0.1"
log = "0.4.8"
stderrlog = "0.4.1"
atty = "0.2.13"
scraper = { version = "0.11.0", default-features = false, features = [] }
phf = "0.7.24"

[package.metadata.deb]
extended-description = """\
Standalone IRC bot; for resolving URLs posted, retrieving, and posting page
titles to a configurable IRC server and channels"""
maintainer-scripts = "debian"
assets = [
    ["example.config.toml", "usr/share/doc/url-bot-rs/", "644"],
    ["url-bot-rs.1", "usr/local/share/man/man1/", "644"],
    ["systemd/url-bot-rs.service", "lib/systemd/system/", "644"],
    ["target/release/url-bot-rs", "usr/bin/", "755"],
    ["target/release/url-bot-get", "usr/bin/", "755"]
]
